[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nbyt-rss"
version = "0.4.7"
description = "Simple CLI app to add YouTube RSS feeds correctly."
authors = [{ name = "Evan Baird", email = "mrcartoonster@gmail.com" }]
requires-python = "~=3.12"
readme = "README.md"
dependencies = [
    "typer>=0.12.5,<0.13",
    "httpx>=0.27.2,<0.28",
    "yarl>=1.11.1,<2",
    "parsel>=1.9.1,<2",
    "rich>=13.8.1,<14",
]

[project.scripts]
nbyt-rss = "nbyt_rss.main:app"

[dependency-groups]
dev = [
    "pre-commit>=3.8.0,<4",
    "ipython>=8.27.0,<9",
]
